--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Today's Offer
     </div>
     <div class="row m-5 p-5 ">
       <div class="col-3">
-  <div class="card shadow-lg e" style="width: 18rem;">
+  <div class="card shadow-lg" >
   <img height="200px" src="https://tse1.mm.bing.net/th/id/OIP.fxdrID-cyGo1ADqJJIWFTgHaGn?rs=1&pid=ImgDetMain&o=7&rm=3" class="card-img-top" alt="Pzza"/>
   <div class="card-body">
     <h5 class="card-title">Pizza</h5>
@@ -112,7 +112,7 @@ Today's Offer
 </div>
 </div>
 <div class="col-3">
-  <div class="card shadow-lg" style="width: 18rem;">
+  <div class="card shadow-lg" >
   <img height="200px" src="https://png.pngtree.com/png-clipart/20231017/original/pngtree-burger-food-png-free-download-png-image_13329458.png" class="card-img-top" alt="Burgur"/>
   <div class="card-body">
     <h5 class="card-title">Burger</h5>
@@ -125,7 +125,7 @@ Today's Offer
 </div>
 </div>
 <div class="col-3">
-  <div class="card shadow-lg" style="width: 18rem;">
+  <div class="card shadow-lg" >
   <img height="200px" src="https://tse3.mm.bing.net/th/id/OIP.WKLoOTpXHJhXlLImhUwtcwAAAA?pid=ImgDet&w=206&h=206&c=7&o=7&rm=3" class="card-img-top" alt="Dosa"/>
   <div class="card-body">
     <h5 class="card-title">Ghee Rost</h5>
@@ -139,7 +139,7 @@ Today's Offer
 </div>
 
 <div class="col-3">
-  <div class="card shadow-lg" style="width: 18rem;">
+  <div class="card shadow-lg">
   <img height="200px" src="https://tse3.mm.bing.net/th/id/OIP.C3Ep0grJrP7VQASs-3ocnwHaFY?rs=1&pid=ImgDetMain&o=7&rm=3" class="card-img-top" alt="Noodles"/>
   <div class="card-body">
     <h5 class="card-title">Noodles</h5>
